@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/DarkIce.cpp)
-AM_INIT_AUTOMAKE(darkice, 0.14)
+AM_INIT_AUTOMAKE(darkice, 0.15beta)
 
 AM_CONFIG_HEADER(config.h)
 
@@ -12,7 +12,7 @@ AC_HAVE_HEADERS(errno.h fcntl.h stdio.h stdlib.h string.h unistd.h limits.h)
 AC_HAVE_HEADERS(signal.h time.h sys/time.h sys/types.h sys/wait.h math.h)
 AC_HAVE_HEADERS(netdb.h netinet/in.h sys/ioctl.h sys/socket.h sys/stat.h)
 AC_HAVE_HEADERS(sched.h pthread.h)
-AC_HAVE_HEADERS(sys/soundcard.h sys/audio.h)
+AC_HAVE_HEADERS(sys/soundcard.h sys/audio.h sys/audioio.h)
 AC_HEADER_SYS_WAIT()
 
 AC_TYPE_PID_T()
